--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,20 @@
 <%- include("partials/header") -%>
 
+  <h1><%= listTitle %></h1>
 
+<% tasks.forEach(function(task)
+  { %>
+      <form action="/delete" method="post">
+          <input type="checkbox" onChange="this.form.submit()" name="checkbox" value ="<%=task._id %>">
+          <p><%= task.name %></p>
+          <input type="hidden" name="listName" value="<%=listTitle%>"></input>
+      </form>   
+ <% });
+  %>
+
+  <form action="/" method="post">
+      <input type="text" name="task" autocomplete="off" placeholder="New Task" >
+      <button type="submit" name="list" value="<%=listTitle%>" >Submit</button>
+  </form>
 
 <%- include("partials/footer") -%> 
